fix extra space

--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@
 .introduction{
     width: 600px;
     margin: 0 auto;
-    text-align: center;
+    text-align: justify;
     background-color: white;
     padding: 16px 32px;
     border-radius: 32px;
@@ -102,7 +102,10 @@
     }
 
     .introduction{
-        width: 300px;
+        width: auto;
+        margin-left: 5px;
+        margin-right: 5px;
+        
     }
     .list-container{
         left: 80%;
